--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   "author": "Your Name",
   "license": "UNLICENSED",
   "peerDependencies": {
-    "@mui/material": "^5.0.0 || ^6.0.0",
+    "@mui/material": "^5.0.0 || ^6.0.0 || ^7.0.0",
     "react": "^18.0.0 || ^19.0.0",
-    "next": "^14.0.0 || ^15.0.0"
+    "next": "^14.0.0 || ^15.0.0 || ^16.0.0"
   },
   "repository": {
     "type": "git",
